# Image-Caption

./: .gitignore  Dockerfile  Makefile  README.md  app.py  improvement_plan.md  main.py  models.py  pyproject.toml  test_app.py
.github/workflows/: ci.yml
notebooks/: example_usage.ipynb  video_caption_example.ipynb
src/image_caption/: __init__.py  app.py  config.py  extensions.py  models.py  routes.py  utils.py
src/image_caption/static/: style.css
src/image_caption/templates/: index.html
templates/: index.html
tests/: test_app.py  test_routes.py
